# bnav

./: Cargo.toml  Rocket.toml
boards/: test.txt
frontend/: package-lock.json  package.json
frontend/src/: App.js  App.scss
frontend/src/components/: Board.js  Game.js  Player.js  Tile.js
src/: board.rs  config.rs  game.rs  lib.rs  main.rs  player.rs  tile.rs
