[package]
name = "bnav"
version = "0.1.0"
authors = ["lorenzomeninato"]
edition = "2018"

[lib]
name = "bnav"
path = "src/lib.rs"

[[bin]]
name = "bnav"
path = "src/main.rs"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rocket_contrib = "0.4"